testdata/invalid/import-cycle/sub/sub.hzn
package sub

import root "../"

type Inner struct {
    back root.Wrapper
}
